Fix bug resolving atomic ref fields

--- a/doi-to-emu.ipynb
+++ b/doi-to-emu.ipynb
@@ -43,7 +43,7 @@
     "                    vals.append(get_irn(col, get_irns(row, api), api))\n",
     "                rec[col] = vals\n",
     "            else:\n",
-    "                rec[col] = get_irn(col, get_irns(row, api), api)\n",
+    "                rec[col] = get_irn(col, get_irns(val, api), api)\n",
     "    return rec\n",
     "\n",
     "\n",
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# Create the EMuAPI object based on params in the TOML file\n",
-    "api = EMuAPI(config_path=r\"emurestapi.toml\")\n",
+    "api = EMuAPI(config_path=r\"_emurestapi.toml\")\n",
     "\n",
     "# Resolve the DOI\n",
     "ref = Reference(\"https://doi.org/10.1093/petrology/egu024\")\n",
